styles.css
/* Global */
a {
  text-decoration: none;
  color: black;
}

img {
  margin-top: 20px;

}

/* grid 1 */
.grid-container {
  display: grid;
  grid-template-areas:
    'header header header'
    'menu main main'
    'menu footer footer';
  margin-bottom: -80px;
}

.item1 {
  grid-area: header;
}
.item2 {
  grid-area: menu;
}
.item3 {
  grid-area: main;
}
.item4 {
  grid-area: left;
}
.item5 {
  grid-area: footer;
}

.grid-container > div {
  padding: 20px 0;
}

/* grid 2 styles */
.grid-container2 {
  display: grid;
}
/* grid1 item1 */
#welcome {
  font-family: 'Cantarell', sans-serif;
  font-size: 1.7rem;
  transform: scale(0.8, 1.2);
  font-weight: bold;
  margin-left: 0;
  margin-bottom: 10px;
}

/* grid1 item2 */
.brand-icon {
  transform: rotate(-90deg);
  font-size: 60px;
  display: block;
  width: 40px;
  padding-left: 10px;
}

.menu-align {
  margin-left: 55px;
  /* margin-right: -150px; */
}

/* grid1 item3 */
.item3 {
  margin-top: 44px;
  margin-left: 14px;
  line-height: 0.5;
  font-family: 'Cantarell', sans-serif;
  transform: scale(1.2, 1.5);
  font-weight: 300;
  font-size: .8rem;
}
.item3 > p {
  margin-top: 3px;
  margin-bottom: 3px;
  padding-top: 0;
}

.info p:last-of-type {
  margin-bottom: 0;
}
.line {
  margin: 0;
  /* margin-top: 0; */
  width: 300px;
  /* height: 5px; */
}

.line img {
  margin-top: -20px;
  padding-top: 0;
}
.item3 a {
  display: block;
}

.bold {
  font-weight: bold;

  /* font-size: 50px; */
}

.contact a {
  margin-bottom: 9px;
  font-size: .6rem;
  font-weight: 500;
  margin-top: 0px;
}
.contact a:first-of-type {
  margin-top: -5px;
}
.enlarge {
  font-size: 0.8rem;
}
hr {
  margin: 5px 0;
  border-radius: 45%;
  height: 2px;
  background-color: black;
  width: 300px;
}

.shrinky {
  line-height: 1.2;
}
.colored {
  color: red;
}

/* .shrinky {
  line-height: 0;
} */

.inline {
  margin-left: 5px;
}

.light {
  font-weight: lighter;
}

.border-line {
  border-bottom: 5px solid black;
  width: 350px;
  margin: 10px 0;
}

 /* grid1 item5 */
.item5 .arrow-head {
  transform: rotate(-90deg);
  font-size: 40px;
  display: inline-block;
  margin-right: 40px;
}

.header {
  margin-left: 55px;
}

#signature {
  margin-left: 85px;
  font-size: 60px;
  margin-bottom: -20px;
  font-family: 'Dancing Script', cursive;
}

.alignment {
  margin-top: 0;
  padding-top:0;
  margin-left: -90px;
}

.upshift {
  margin-left: 120px;
  margin-top: 32px;
}

.grow {
  width: 220px;
  border-radius: 50%;
}

.item2 img {
  margin-top: 7px;

}

